# operator

./: CMakeLists.txt  License  manifest.xml
src/: UDPconnect.h  controlfunctions.cpp  controlfunctions.h  operator.cpp
